--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <div class="home">
                 <p style="text-align:center;font-size:xxx-large;">弱狐服务器交流组 - 存档下载页</p>
                 <p style="font-size:xx-large; text-align:center;">公共存档</p>
+                <p style="font-size:x-large;">[2025]Changed(1.18.2Forge)</p>
                 <p style="font-size:x-large;">[2024]暮色森林(1.19.2Forge)</p>
                 <p style="font-size:x-large;">[2023]Wind Land 2(1.20.1Java)</p>
                 <p style="font-size:x-large;">[2023]吸血鬼&狼人(1.18.2Forge)</p>
@@ -46,6 +47,45 @@
                 <p style="font-size:medium;bottom: 0;position:relative;text-align: center;justify-content: center;">请使用大于1400x900分辨率的PC端访问网页体验更佳</p>
             </div>
         </section>
+
+        <section style="
+        background: url(img/changed.jpg)fixed;
+        position: relative;
+        background-size: cover;
+        background-position: center;
+        align-items: center;
+    ">          
+        <div class="introduce" style="
+        position: relative;
+        background-position:center;
+        color: white;
+        ">
+            <p style="font-size:xx-large;text-align: center;">[2025]Changed</p>
+            <p style="font-size:large;">建议Minecraft版本</p>
+            <p style="font-size:large;">Java-1.18.2</p>
+            <p style="font-size:large;">建议Forge版本</p>
+            <p style="font-size:large;">40.3.3</p>
+
+            <div class="says">
+                <p style="font-size:large;">-------------------------</p>
+                <p style="font-size:large;">娜迦屠夫</p>
+                <p style="font-size:large;">-------------------------</p>
+                <p style="font-size:large;">发育全靠带</p>
+                <p style="font-size:large;">-------------------------</p>
+                <p style="font-size:large;">2025年2月-2025年2月</p>
+                <p style="font-size:large;">-------------------------</p>
+                <p style="font-size:large;">图中位置:主世界(-107 62 -148)</p>
+            </div>
+            <br><br>
+            <div class="downside">
+                <p style="font-size:large;">存档大小:0MB(0个)</p>
+                <p style="font-size:large;">模组大小:0MB(0个)</p>
+                <a href="https:" target="_blank" style="color: white">存档下载(访问码: )</a>
+                <a href="https:" target="_blank" style="color: white">Mods下载(访问码: )</a>
+            </div>
+        </div>
+    </section>
+
 
         <section style="
         background: url(img/twilightforestPot.jpg)fixed;
