--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 
             <div class="says">
                 <p style="font-size:large;">-------------------------</p>
-                <p style="font-size:large;">娜迦屠夫</p>
+                <p style="font-size:large;"> </p>
                 <p style="font-size:large;">-------------------------</p>
-                <p style="font-size:large;">发育全靠带</p>
+                <p style="font-size:large;"> </p>
                 <p style="font-size:large;">-------------------------</p>
                 <p style="font-size:large;">2025年2月-2025年2月</p>
                 <p style="font-size:large;">-------------------------</p>
