--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
             color: white;
             ">
                 <p style="font-size:xx-large;text-align: center;">[2018]PocketMine-MP - PM首服</p>
-                <p style="font-size:large;">Minecraft版本BedRock-1.1.1</p>
+                <p style="font-size:large;">Minecraft版本BedRock-1.1.x</p>
                 <p style="font-size:large;">存档读取需用Java版本Minecraft</p>
 
                 <div class="says">
@@ -445,6 +445,7 @@
                     <p style="font-size:large;">存档大小:58.1MB(13个)</p>
                     <p style="font-size:large;">服务端大小:88MB(Windows)</p>
                     <p style="font-size:large;">其中gf与land存档需服务端配合</p>
+                    <p style="font-size:large;">服务端不支持Windows11内核，请使用10或更低版本运行</p>
                     <a href="https://cloud.189.cn/t/vqqmQvzIzYjm" target="_blank" style="color: white">存档下载</a>
                     <a href="https://cloud.189.cn/t/bEZBJfV7Zbaa" target="_blank" style="color: white">服务端下载(包括存档)</a>
                     <a href="https://cloud.189.cn/t/7zIfIjRZRFfa" target="_blank" style="color: white">客户端下载</a>
