--- a/Mobile.html
+++ b/Mobile.html
@@ -296,7 +296,7 @@
             color: black;
             ">
                 <p style="text-align: center;">[2018]PocketMine-MP - PM首服</p>
-                <p style="font-size:medium;">Minecraft版本BedRock-1.1.1</p>
+                <p style="font-size:medium;">Minecraft版本BedRock-1.1.x</p>
                 <p style="font-size:medium;">存档读取需用Java版本Minecraft</p>
 
                 <div class="says" style="position:absolute;">
@@ -314,6 +314,7 @@
                     <p style="font-size:medium;">存档大小:58.1MB(13个)</p>
                     <p style="font-size:large;">服务端大小:88MB(Windows)</p>
                     <p style="font-size:large;">其中gf与land存档需服务端配合</p>
+                    <p style="font-size:large;">服务端不支持Windows11内核，请使用10或更低版本运行</p>
                     <a href="https://cloud.189.cn/t/vqqmQvzIzYjm" target="_blank" style="color: black">存档下载</a>
                     <a href="https://cloud.189.cn/t/bEZBJfV7Zbaa" target="_blank" style="color: black">服务端下载(包括存档)</a>
                     <a href="https://cloud.189.cn/t/7zIfIjRZRFfa" target="_blank" style="color: black">客户端下载</a>
